# api/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 
 info:
   title: gift-list
@@ -105,7 +105,7 @@ paths:
           schema:
             type: string
           required: true
-          description: The book name
+          description: The group name
       responses:
         '204':
           description: The group was deleted
@@ -174,6 +174,24 @@ paths:
           description: The user has updated
         '500':
           description: Some server error
+    delete:
+      summary: Remove the user by id
+      tags:
+        - Users
+      security:
+        - userAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: The user id
+      responses:
+        '204':
+          description: The user was deleted
+        '404':
+          description: The user was not found
 
 components:
 
